template.yaml
---
# Source: hava/charts/elasticsearch/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch-master
  labels:
    heritage: "Helm"
    release: "bob"
    chart: "elasticsearch"
    app: "elasticsearch-master"
  annotations:
    {}
spec:
  type: ClusterIP
  selector:
    release: "bob"
    chart: "elasticsearch"
    app: "elasticsearch-master"
  ports:
  - name: http
    protocol: TCP
    port: 9200
  - name: transport
    protocol: TCP
    port: 9300
---
# Source: hava/charts/elasticsearch/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch-master-headless
  labels:
    heritage: "Helm"
    release: "bob"
    chart: "elasticsearch"
    app: "elasticsearch-master"
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  clusterIP: None # This is needed for statefulset hostnames like elasticsearch-0 to resolve
  # Create endpoints also if the related pod isn't ready
  publishNotReadyAddresses: true
  selector:
    app: "elasticsearch-master"
  ports:
  - name: http
    port: 9200
  - name: transport
    port: 9300
---
# Source: hava/charts/kibana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bob-kibana
  labels: 
    app: kibana
    release: "bob"
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 5601
      protocol: TCP
      name: http
      targetPort: 5601
  selector:
    app: kibana
    release: "bob"
---
# Source: hava/templates/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: bob-hava-redis
  labels:
    helm.sh/chart: hava-0.1.0
    app.kubernetes.io/instance: bob
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: hava-redis
spec:
  ports:
    - port: 6379
  selector:
    app.kubernetes.io/name: hava-redis
    app.kubernetes.io/instance: bob
---
# Source: hava/templates/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: bob-hava-web
  labels:
    app.kubernetes.io/name: hava-web
    helm.sh/chart: hava-0.1.0
    app.kubernetes.io/instance: bob
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 9700
      targetPort: 9700
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hava-web
    app.kubernetes.io/instance: bob
---
# Source: hava/charts/kibana/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bob-kibana
  labels: 
    app: kibana
    release: "bob"
    heritage: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kibana
      release: "bob"
  template:
    metadata:
      labels:
        app: kibana
        release: "bob"
      annotations:
        
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
      containers:
      - name: kibana
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        image: "docker.elastic.co/kibana/kibana:6.8.13"
        imagePullPolicy: "IfNotPresent"
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 5
          exec:
            command:
              - sh
              - -c
              - |
                [...]
        ports:
        - containerPort: 5601
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
---
# Source: hava/templates/deployment-build.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bob-hava-build
  labels:
    app.kubernetes.io/name: hava-build
    helm.sh/chart: hava-0.1.0
    app.kubernetes.io/instance: bob
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hava-build
      app.kubernetes.io/instance: bob
  template:
    metadata:
      annotations:
        checksum.helm.kubernetes.io/secret: 022b7e39a9f94aef310a571ed47131c3ae0b50864c798b42e14d50342d4762aa
        checksum.helm.kubernetes.io/configmap: 411c173002a67a57f2a401bfa8c84b2d04382fa796b37d896f396768df1c6d58
      labels:
        app.kubernetes.io/name: hava-build
        app.kubernetes.io/instance: bob
    spec:
      containers:
      - name: hava-build
        image: "hava/self-hosted:2.0.237"
        imagePullPolicy: IfNotPresent
        command: ["/hava/bin/hava"]
        args: ["exec", "build"]
        resources:
          limits:
            memory: 2560M
---
# Source: hava/templates/deployment-clock.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bob-hava-clock
  labels:
    app.kubernetes.io/name: hava-clock
    helm.sh/chart: hava-0.1.0
    app.kubernetes.io/instance: bob
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hava-clock
      app.kubernetes.io/instance: bob
  template:
    metadata:
      annotations:
        checksum.helm.kubernetes.io/secret: 022b7e39a9f94aef310a571ed47131c3ae0b50864c798b42e14d50342d4762aa
        checksum.helm.kubernetes.io/configmap: 411c173002a67a57f2a401bfa8c84b2d04382fa796b37d896f396768df1c6d58
      labels:
        app.kubernetes.io/name: hava-clock
        app.kubernetes.io/instance: bob
    spec:
      containers:
      - name: hava-clock
        image: "hava/self-hosted:2.0.237"
        imagePullPolicy: IfNotPresent
        command: ["/hava/bin/hava"]
        args: ["exec", "clock"]
        # resources:
        #   requests:
        #     cpu: "1"
        #     memory: "1024M"
          # limits:
          #   cpu: "1"
          #   memory: "1536M"
---
# Source: hava/templates/deployment-import.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bob-hava-import
  labels:
    app.kubernetes.io/name: hava-import
    helm.sh/chart: hava-0.1.0
    app.kubernetes.io/instance: bob
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hava-import
      app.kubernetes.io/instance: bob
  template:
    metadata:
      annotations:
        checksum.helm.kubernetes.io/secret: 022b7e39a9f94aef310a571ed47131c3ae0b50864c798b42e14d50342d4762aa
        checksum.helm.kubernetes.io/configmap: 411c173002a67a57f2a401bfa8c84b2d04382fa796b37d896f396768df1c6d58
      labels:
        app.kubernetes.io/name: hava-import
        app.kubernetes.io/instance: bob
    spec:
      containers:
      - name: hava-import
        image: "hava/self-hosted:2.0.237"
        imagePullPolicy: IfNotPresent
        command: ["/hava/bin/hava"]
        args: ["exec", "import"]
        resources:
          requests:
            cpu: 500m
          limits:
            memory: 3072M
---
# Source: hava/templates/deployment-render.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bob-hava-render
  labels:
    app.kubernetes.io/name: hava-render
    helm.sh/chart: hava-0.1.0
    app.kubernetes.io/instance: bob
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hava-render
      app.kubernetes.io/instance: bob
  template:
    metadata:
      annotations:
        checksum.helm.kubernetes.io/secret: 022b7e39a9f94aef310a571ed47131c3ae0b50864c798b42e14d50342d4762aa
        checksum.helm.kubernetes.io/configmap: 411c173002a67a57f2a401bfa8c84b2d04382fa796b37d896f396768df1c6d58
      labels:
        app.kubernetes.io/name: hava-render
        app.kubernetes.io/instance: bob
    spec:
      containers:
      - name: hava-render
        image: "hava/self-hosted:2.0.237"
        imagePullPolicy: IfNotPresent
        command: ["/hava/bin/hava"]
        args: ["exec", "render"]
        resources:
          limits:
            memory: 2560M
---
# Source: hava/templates/deployment-report.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bob-hava-report
  labels:
    app.kubernetes.io/name: hava-report
    helm.sh/chart: hava-0.1.0
    app.kubernetes.io/instance: bob
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hava-report
      app.kubernetes.io/instance: bob
  template:
    metadata:
      annotations:
        checksum.helm.kubernetes.io/secret: 022b7e39a9f94aef310a571ed47131c3ae0b50864c798b42e14d50342d4762aa
        checksum.helm.kubernetes.io/configmap: 411c173002a67a57f2a401bfa8c84b2d04382fa796b37d896f396768df1c6d58
      labels:
        app.kubernetes.io/name: hava-report
        app.kubernetes.io/instance: bob
    spec:
      containers:
        - name: hava-report
          image: "hava/self-hosted:2.0.237"
          imagePullPolicy: IfNotPresent
          command: ["/hava/bin/hava"]
          args: ["exec", "report"]
          resources:
            limits:
              memory: 4096M
---
# Source: hava/templates/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bob-hava-web
  labels:
    app.kubernetes.io/name: hava-web
    helm.sh/chart: hava-0.1.0
    app.kubernetes.io/instance: bob
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hava-web
      app.kubernetes.io/instance: bob
  template:
    metadata:
      annotations:
        checksum.helm.kubernetes.io/secret: 022b7e39a9f94aef310a571ed47131c3ae0b50864c798b42e14d50342d4762aa
        checksum.helm.kubernetes.io/configmap: 411c173002a67a57f2a401bfa8c84b2d04382fa796b37d896f396768df1c6d58
      labels:
        app.kubernetes.io/name: hava-web
        app.kubernetes.io/instance: bob
    spec:
      containers:
        - name: hava
          image: "hava/self-hosted:2.0.237"
          imagePullPolicy: IfNotPresent
          command: ["/hava/bin/hava"]
          args: ["exec", "web"]
          resources:
            requests:
              cpu: 300m
            limits:
              memory: 1536M
          ports:
            - name: http
              containerPort: 9700
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health_check
              port: 9700
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
---
# Source: hava/templates/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bob-hava-worker
  labels:
    app.kubernetes.io/name: hava-worker
    helm.sh/chart: hava-0.1.0
    app.kubernetes.io/instance: bob
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hava-worker
      app.kubernetes.io/instance: bob
  template:
    metadata:
      annotations:
        checksum.helm.kubernetes.io/secret: 022b7e39a9f94aef310a571ed47131c3ae0b50864c798b42e14d50342d4762aa
        checksum.helm.kubernetes.io/configmap: 411c173002a67a57f2a401bfa8c84b2d04382fa796b37d896f396768df1c6d58
      labels:
        app.kubernetes.io/name: hava-worker
        app.kubernetes.io/instance: bob
    spec:
      containers:
      - name: hava-worker
        image: "hava/self-hosted:2.0.237"
        command: ["/hava/bin/hava"]
        args: ["exec", "worker"]
        resources:
          limits:
            memory: 3072M
---
# Source: hava/charts/elasticsearch/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-master
  labels:
    heritage: "Helm"
    release: "bob"
    chart: "elasticsearch"
    app: "elasticsearch-master"
  annotations:
    esMajorVersion: "6"
spec:
  serviceName: elasticsearch-master-headless
  selector:
    matchLabels:
      app: "elasticsearch-master"
  replicas: 3
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: elasticsearch-master
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 200Gi
      storageClassName: hava-ssd
  template:
    metadata:
      name: "elasticsearch-master"
      labels:
        heritage: "Helm"
        release: "bob"
        chart: "elasticsearch"
        app: "elasticsearch-master"
      annotations:
        
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - "elasticsearch-master"
            topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 120
      volumes:
      enableServiceLinks: true
      containers:
      - name: "elasticsearch"
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        image: "docker.elastic.co/elasticsearch/elasticsearch:6.8.13"
        imagePullPolicy: "IfNotPresent"
        readinessProbe:
          exec:
            command:
              - sh
              - -c
              - |
                [...]
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 5
        ports:
        - name: http
          containerPort: 9200
        - name: transport
          containerPort: 9300
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
          - name: "elasticsearch-master"
            mountPath: /usr/share/elasticsearch/data
---
# Source: hava/templates/statefulset-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bob-hava-redis
  labels:
    app.kubernetes.io/name: hava-redis
    helm.sh/chart: hava-0.1.0
    app.kubernetes.io/instance: bob
    app.kubernetes.io/managed-by: Helm
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hava-redis
      app.kubernetes.io/instance: bob
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hava-redis
        app.kubernetes.io/instance: bob
    spec:
      containers:
      - name: hava-redis
        image: redis:3.2-alpine
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "hava-ssd"
      resources:
        requests:
          storage: 4Gi
---
# Source: hava/templates/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: aws-load-balancer
spec:
  controller: ingress.k8s.aws/alb
---
# Source: hava/templates/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bob-hava-ingress
  labels:
    app.kubernetes.io/name: bob-hava-ingress
    helm.sh/chart: hava-0.1.0
    app.kubernetes.io/instance: bob
    app.kubernetes.io/managed-by: Helm
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: aws-load-balancer
  defaultBackend:
    service:
      name: bob-hava-web
      port: 
        number: 9700
---
# Source: hava/charts/elasticsearch/templates/test/test-elasticsearch-health.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "bob-xeyfd-test"
  annotations:
    "helm.sh/hook": test-success
spec:
  securityContext:
    fsGroup: 1000
    runAsUser: 1000
  containers:
  - name: "bob-hsuqq-test"
    image: "docker.elastic.co/elasticsearch/elasticsearch:6.8.13"
    imagePullPolicy: "IfNotPresent"
    command:
      - "sh"
      - "-c"
      - |
        #!/usr/bin/env bash -e
        curl -XGET --fail 'elasticsearch-master:9200/_cluster/health?wait_for_status=green&timeout=1s'
  restartPolicy: Never
